fix c-form-file uploading. loader was out of place

--- a/src/components/forms/file/c-form-file/c-form-file.css
+++ b/src/components/forms/file/c-form-file/c-form-file.css
@@ -75,7 +75,7 @@ Licensed under the terms of the MIT license. See the LICENSE file in the project
     text-align: center;
 }
 
-.is-uploading > div{
+.is-uploading > c-spinner{
     position: absolute;
     top: 0;
     left: 0;
